--- a/public/scss/_cases.scss
+++ b/public/scss/_cases.scss
@@ -2,8 +2,7 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;;
     padding-top: 30px;
     padding-bottom: 150px;
-    border: 3px solid rgb(185, 60, 81);
-    margin: 1px;
+    border-top: 2px solid rgb(185, 60, 81);
     &__title{
         text-align: center;
         font-size: 45px;
@@ -28,6 +27,12 @@
                     display: none;
                  }
             }
+        }
+        .slick-next{
+            @media #{$xs}{
+                right: 0;
+             }
+
         }
         & .slick-dots{
             & button{
