--- a/public/scss/_introduction.scss
+++ b/public/scss/_introduction.scss
@@ -1,8 +1,7 @@
 .introduction{
     &__area{
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
-        border: 3px solid rgb(185, 60, 81);
-        margin: 1px;
+        border-top: 2px solid rgb(185, 60, 81);
         padding-bottom: 100px;
     }
 
@@ -18,7 +17,8 @@
         max-width: 300px;
         animation: img-introduction-animation 2s linear infinite alternate;
         @media #{$xs}{
-            width: 100%;
+            max-width: 250px;
+            margin: 10px;
         }
         @media #{$sm, $md, $lg, }{
             margin-bottom: 50px;
