--- a/public/scss/_skils.scss
+++ b/public/scss/_skils.scss
@@ -2,8 +2,7 @@
      background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;;
      padding-top: 30px;
      padding-bottom: 150px;
-     border: 3px solid rgb(185, 60, 81);
-     margin: 1px;
+     border-top: 2px solid rgb(185, 60, 81);
     &__title{
         text-align: center;
         font-size: 45px;
@@ -14,7 +13,7 @@
     }
     &__subtitle{
         text-align: center;
-        font-size: 20px;
+        font-size: 18px;
         color: #fff;
         @media #{$xs}{
             font-size: 15px;
@@ -23,9 +22,9 @@
     }
     &__btn-box{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: center;
         align-items: center;
-        border-right: 1px solid #fff;
         @media #{$xs, $sm, $md}{
             border: none;
             margin-bottom: 30px;
@@ -33,7 +32,7 @@
 
         & button{
             background: none;
-            width: 120px;
+            width: 125px;
             border: none;
             margin-bottom: 20px;
             color: #fff;
@@ -42,6 +41,9 @@
             font-weight: 700;
             text-transform: uppercase;
             transition: 0.6s linear;
+            margin-right: 10px;
+            
+           
             &:hover{
                 color: rgb(255, 70, 70);
             }
@@ -63,8 +65,9 @@
     &__ability-box{
         display: flex;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
+        margin-bottom: 30pxgvb;
         @media #{$xs, $sm, $md}{
             flex-direction: column-reverse;
             margin-bottom: 20px;
@@ -77,6 +80,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        margin-top: 15px;
         & .circle-progress-box{
             width: 100px;
             height: 100px;
@@ -101,6 +105,7 @@
     &__img-ability{
         max-width: 200px;
         animation: img-ability-animation 2s  ease-in infinite alternate;
+        margin-top: 10px;
     }
     &__text-ability{
         font-size: 15px;
