--- a/public/scss/_cases.scss
+++ b/public/scss/_cases.scss
@@ -156,6 +156,26 @@
             
         }
     }
+    &__link-repositories{
+        margin-top: 80px;
+        text-align: center;
+
+        & p{
+            color: #fff;
+        
+        }
+        & a{
+            color: rgb(185, 60, 81);
+            font-size: 22px;
+            margin-left: 5PX;
+            text-decoration: underline;
+            transition: 0.5s linear ;
+            &:hover{
+                color: rgb(219, 41, 41);
+            }
+
+        }
+    }
     
 }
 
@@ -164,23 +184,3 @@
 
 
 
-
-.btn-grad {background-image: linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%)}
-.btn-grad {
-   margin: 10px;
-   padding: 15px 45px;
-   text-align: center;
-   text-transform: uppercase;
-   transition: 0.5s;
-   background-size: 200% auto;
-   color: white;            
-   box-shadow: 0 0 20px #eee;
-   border-radius: 10px;
-   display: block;
- }
-
- .btn-grad:hover {
-   background-position: right center; /* change the direction of the change here */
-   color: #fff;
-   text-decoration: none;
- }
